--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,16 +1,23 @@
-<footer class="footer">
-  <div class="container footerBox">
-    <p class="copyright text-muted">
-      Copyright&nbsp;&copy;&nbsp; {{ site.time | date: '%Y' }} 
-      {% if site.pretty-url %} &nbsp;&bull;&nbsp;
-        <a href="{{ site.url }}">{{ site.pretty-url }}</a> 
-      {% endif %}
-    </p>
 
-    <!-- This is my 'Open Source' work. So, please don't remove the below copyright content. :) -->
-    <p class="text-muted">
-      Theme by
-      <a href="https://github.com/bchetty/jekyllBasic">bchetty</a>
-    </p>
+  <footer class="container">
+
+  <div class="row mt20">
+  {% if site.copyright.name %}
+  <div class="col-md-4 text-center">All rights reserved by <a target="_blank" href="{{site.copyright.link}}">{{site.copyright.name}}</a></div>
+    {% endif %}
+    
+  <div class="col-md-4 text-center" >
+  {% if site.built-by %}
+  <a target="_blank" href="http://webjeda.com"><img src="https://img.shields.io/badge/Built%20by-webjeda-blue.svg" alt="{{site.built-by}}"></a>
+  {% endif %}
   </div>
+  <div class="col-md-4 text-center">
+     <a target="_blank" href="{{site.facebook}}"><li class="social facebook"><img src="{{site.baseurl}}/images/facebook.svg" alt="{{site.facebook}}"></li></a> 
+      <a target="_blank" href="{{site.quora}}"><li class="social quora"><img src="{{site.baseurl}}/images/quora.svg" alt="{{site.quora}}"></li></a>      
+      <a target="_blank" href="{{site.twitter}}"><li class="social twitter"><img src="{{site.baseurl}}/images/twitter.svg" alt="{{site.twitter}}"></li></a>      
+      <a target="_blank" href="{{site.github}}"><li class="social github"><img src="{{site.baseurl}}/images/github.svg" alt="{{site.github}}"></li></a>
+  </div>
+  
+  </div> 
+
 </footer>
