--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,8 @@ layout: compress
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
   <script src="{{site.baseurl}}/js/bootstrap.min.js"></script>
  {% if site.analytics %}{% include analytics.html %}{% endif %}
- <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-584f0377ce667628"></script>
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-584f0377ce667628"></script>
+<script id="dsq-count-scr" src="//etherexplorations.disqus.com/count.js" async></script>
   </body>
 
 </html>
