--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,6 +18,7 @@
         <li><a href="{{site.baseurl}}/about/">About</a></li>
         <li><a href="{{site.baseurl}}/contact/">Contact</a></li>
         <li><a href="{{site.baseful}}/zine/">Zine</a></li>
+        <li><a href="{{site.baseful}}/events.html/">Events</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
