--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,8 +17,8 @@
             <ul class="nav navbar-nav navbar-right">
         <li><a href="{{site.baseurl}}/about/">About</a></li>
         <li><a href="{{site.baseurl}}/contact/">Contact</a></li>
-        <li><a href="{{site.baseful}}/zine/">Zine</a></li>
-        <li><a href="{{site.baseful}}/events.html/">Events</a></li>
+        <li><a href="{{site.baseurl}}/zine/">Zine</a></li>
+        <li><a href="{{site.baseurl}}/events/">Events</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
