adding new default

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
 
   <div class="col-md-4 text-center" >
   {% if site.built-by %}
-  <a target="_blank" href="http://etherexplorations.com"><img src="" alt="{{site.built-by}}"></a>
+  <a target="_blank" href="https://github.com/digitalscraps"><img src="" alt="{{site.built-by}}"></a>
   {% endif %}
   </div>
   <div class="col-md-4 text-center">
