updating zine links

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
             <ul class="nav navbar-nav navbar-right">
         <li><a href="{{site.baseurl}}/about/">About</a></li>
         <li><a href="{{site.baseurl}}/contact/">Contact</a></li>
-        <li><a href="{{site.baseurl}}/zine/">Zine</a></li>
+        <li><a href="https://omni-seasonal-omens.tumblr.com/">Zine</a></li>
         <li><a href="{{site.baseurl}}/events/">Events</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
