--- a/_layouts/info.html
+++ b/_layouts/info.html
@@ -13,9 +13,5 @@ layout: default
     {{ content }}
   </div>
 
-</article>
-</div>
-{% include sidebar.html %}
-</div>
-
 {% include fb-script.html %}
+{% include form.html %}
