--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -22,7 +22,7 @@
         </div>
 
         <div class="mt10">
-            <div class="fb-page" data-href="https://www.facebook.com/resonatorart/" data-width="400" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false"><blockquote cite="https://www.facebook.com/resonatorart/" class="fb-xfbml-parse-ignore"><a href="{{site.fb-page-url}}">{{site.fb-page-title}}</a></blockquote></div>
+            <div class="fb-page" data-href="https://www.facebook.com/etherexplorations/" data-width="400" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false"><blockquote cite="https://www.facebook.com/etherexplorations/" class="fb-xfbml-parse-ignore"><a href="{{site.fb-page-url}}">{{site.fb-page-title}}</a></blockquote></div>
         </div>
 
 </div>
