adding social links to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,8 +12,8 @@
   {% endif %}
   </div>
   <div class="col-md-4 text-center">
-      <a target="_blank" href="{{site.facebook}}"><li class="social soundcloud"><i class="fa fa-soundcloud" aria-hidden="true"></i></li></a>
-      <a target="_blank" href="{{site.twitter}}"><li class="social bandcamp"><i class="fa fa-bandcamp" aria-hidden="true"></i></li></a>
+      <a target="_blank" href="{{site.soundcloud}}"><li class="social soundcloud"><i class="fa fa-soundcloud" aria-hidden="true"></i></li></a>
+      <a target="_blank" href="{{site.bandcamp}}"><li class="social bandcamp"><i class="fa fa-bandcamp" aria-hidden="true"></i></li></a>
       <a target="_blank" href="{{site.github}}"><li class="social github"><img src="{{site.baseurl}}/images/github.svg" alt="{{site.github}}"></li></a>
   </div>
 
