--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* Base Styles -------------------- */
 body {
-background: #cc9999
+background-color: #cc9999;
 color: #000;
 margin: 0;
 font: 1em/1.5 "Open Sans", Helvetica, Arial, sans-serif;
