--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
   <a target="_blank" href="https://github.com/digitalscraps"><img src="" alt="{{site.built-by}}"></a>
   {% endif %}
   </div>
-  <div class="col-md-4 text-center">
+  <div class="col-md-4 text-center et__footer">
       <a target="_blank" href="{{site.soundcloud}}"><li class="social soundcloud"><i class="fa fa-soundcloud" aria-hidden="true"></i></li></a>
       <a target="_blank" href="{{site.bandcamp}}"><li class="social bandcamp"><i class="fa fa-bandcamp" aria-hidden="true"></i></li></a>
       <a target="_blank" href="{{site.github}}"><li class="social github"><img src="{{site.baseurl}}/images/github.svg" alt="{{site.github}}"></li></a>
