--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,14 @@ color: #000;
 margin: 0;
 font: 1em/1.5 "Open Sans", Helvetica, Arial, sans-serif;
 }
+
+img {
+    max-width: 100%;
+}
 /* Pseudo-classes ------------------ */
 a:link {
   color: #000;
   text-decoration: none;
-
 }
 
 a:visited {
@@ -19,6 +22,7 @@ a:visited {
 
 a:hover {
   background-color:#66cc99;
+  color: 000;
 }
 
 a:active {
@@ -33,11 +37,22 @@ a:active {
 /* Layout Styles ------------------ */
 
 
-/* Base Styles -------------------- */
-img {
-    max-width: 100%;
+/* Naviagation -------------------- */
+.navbar-brand {
+    font-weight: 900;
+    font-size: 1.85em;
+    padding: 10px;
+    @media screen and (max-width: $on-palm) {
+        font-size: 1.5em;
+    }
 }
 
+footer {
+    border-top: 1px solid $grey-color-light;
+}
+.et__footer a {
+  font: 2rem;
+}
 .mt50 {
     margin-top: 50px;
 }
@@ -48,14 +63,7 @@ img {
 .mt10 {
     margin-top: 10px;
 }
-.navbar-brand {
-    font-weight: 900;
-    font-size: 1.85em;
-    padding: 10px;
-    @media screen and (max-width: $on-palm) {
-        font-size: 1.5em;
-    }
-}
+
 .post-meta {
     color: $grey-color;
 }
@@ -70,10 +78,7 @@ img {
 }
 
 
-footer {
-    border-top: 1px solid $grey-color-light;
-}
-
+/* Social -------------------- */
 .social {
     list-style: none;
     display: inline;
@@ -95,6 +100,7 @@ footer {
     width: 16px;
 }
 
+/* Event Page -------------------- */
 .recent ul {
     list-style: none;
     padding: 0;
@@ -113,7 +119,6 @@ footer {
 
 .pack {
 
-
     display: -webkit-inline-flex;
     display: -ms-inline-flexbox;
     display: inline-flex;
@@ -125,17 +130,3 @@ footer {
     float: none;
 
 }
-
-
-
-/* Naviagation -------------------- */
-.navbar-brand {
-    font-weight: 900;
-    font-size: 1.85em;
-    padding: 10px;
-    @media screen and (max-width: $on-palm) {
-        font-size: 1.5em;
-    }
-}
-
-/* Base Styles -------------------- */
