--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="site-header">
-<nav class="navbar navbar-default navbar-inverse">
+<nav class="navbar">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -9,7 +9,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{{site.baseurl}}/">{{site.title}}</a>
+      <a class="navbar-brand et__brand" href="{{site.baseurl}}/">{{site.title}}</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
