--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,38 @@ font: 1em/1.5 "Open Sans", Helvetica, Arial, sans-serif;
 img {
     max-width: 100%;
 }
+h1 {
+  font-size: 5.625rem; /* 90px/16px  */
+  color: #000;
+  text-transform: uppercase;
+  font-weight: normal;
+  line-height: 1.3;
+  text-shadow: 5px 1px 1px rgba(0,0,0,.3);
+}
+
+h2 {
+  font-size: 3.3125em; /* 53px/16px  */
+  font-weight: normal;
+  line-height: 1.1;
+}
+
+h3 {
+  font-size: 1.25em; /* 20px/16px  */
+  color: #48525c;
+  line-height: 1.2;
+}
+img {
+  max-width: 100%;
+  margin: 0 30px;
+}
+ul, ol {
+  list-style: none;
+  margin-left: 0;
+}
+li {
+  margin-bottom: .5em;
+}
+
 /* Pseudo-classes ------------------ */
 a:link {
   color: #000;
@@ -42,13 +74,13 @@ a:active {
     font-weight: 900;
     font-size: 1.85em;
     padding: 10px;
-    @media screen and (max-width: $on-palm) {
-        font-size: 1.5em;
-    }
+    color: #fff;
 }
-
+et_nav li {
+  font size: 1rem;
+}
 footer {
-    border-top: 1px solid $grey-color-light;
+
 }
 .et__footer {
     margin-top: 20px;
