--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="site-header">
 <nav class="navbar">
-  <div class="container-fluid">
+  <div class="container-fluid et_navbar">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -9,15 +9,15 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand et__brand" href="{{site.baseurl}}/">{{site.title}}</a>
+      <a class="navbar-brand" href="{{site.baseurl}}/">{{site.title}}</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
-        <li><a href="{{site.baseurl}}/info/">Info</a></li>
-        <li><a href="https://omni-seasonal-omens.tumblr.com/">Zine</a></li>
-        <li><a href="{{site.baseurl}}/events/">Events</a></li>
+        <ul class="nav navbar-nav navbar-right et_nav">
+          <li><a href="{{site.baseurl}}/info/">Info</a></li>
+          <li><a href="https://omni-seasonal-omens.tumblr.com/">Zine</a></li>
+          <li><a href="{{site.baseurl}}/events/">Events</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
