--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,6 @@ h1 {
   text-transform: uppercase;
   font-weight: normal;
   line-height: 1.3;
-  text-shadow: 5px 1px 1px rgba(0,0,0,.3);
 }
 
 h2 {
@@ -29,16 +28,12 @@ h3 {
   color: #48525c;
   line-height: 1.2;
 }
-img {
-  max-width: 100%;
-  margin: 0 30px;
-}
 ul, ol {
   list-style: none;
   margin-left: 0;
 }
 li {
-  margin-bottom: .5em;
+
 }
 
 /* Pseudo-classes ------------------ */
@@ -75,6 +70,10 @@ a:active {
     font-size: 1.85em;
     padding: 10px;
     color: #fff;
+}
+et_navbar {
+  background-color: #fff;
+  padding: 4em;
 }
 et_nav li {
   font size: 1rem;
