--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ a:active {
     color: #fff;
 }
 .et_navbar {
-  background-color: #fff;
+  background-color: #000;
   padding: 4em;
 }
 et_nav li {
