--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="site-header">
-<nav class="navbar">
-  <div class="container-fluid et_navbar">
+<nav class="navbar navbar-default navbar-inverse">
+  <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -14,7 +14,7 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-right et_nav">
+        <ul class="nav navbar-nav navbar-right et_navlink">
           <li><a href="{{site.baseurl}}/info/">Info</a></li>
           <li><a href="https://omni-seasonal-omens.tumblr.com/">Zine</a></li>
           <li><a href="{{site.baseurl}}/events/">Events</a></li>
