--- a/css/style.css
+++ b/css/style.css
@@ -71,13 +71,11 @@ a:active {
     padding: 10px;
     color: #fff;
 }
-.et_navbar {
-  background-color: #000;
-  padding: 4em;
-}
-et_nav li {
+
+.et_navlink li {
   font size: 1rem;
 }
+
 footer {
 
 }
