--- a/css/style.css
+++ b/css/style.css
@@ -24,9 +24,17 @@ h2 {
 }
 
 h3 {
-  font-size: 1.25em; /* 20px/16px  */
-  color: #48525c;
+  font-size: 3.01125em; /* 20px/16px  */
+  color: #000;
   line-height: 1.2;
+}
+h4 {
+  font-size: 2.0075em;
+  line-height: 1;
+}
+h6 {
+  font-size: 1.75em;
+  line-height: 2;
 }
 ul, ol {
   list-style: none;
