--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ h2 {
 }
 
 h3 {
-  font-size: 3.01125em; 
+  font-size: 3.01125em;
   color: #000;
   line-height: 1.2;
 }
@@ -46,13 +46,12 @@ li {
 
 /* Pseudo-classes ------------------ */
 a:link {
-  color: #000;
-  text-decoration: none;
+  color: #ccffff;
+  border-bottom: .5px soild #ccffff;
 }
 
 a:visited {
-  color: #66cc99;
-  background-color:#ffffff;
+  color: #ffffcc;
 }
 
 a:hover {
@@ -61,8 +60,7 @@ a:hover {
 }
 
 a:active {
-  color: #fff;
-  baclground-color: #999999:
+  color: #333399;
 }
 
 
