change background color

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* Base Styles -------------------- */
 body {
-background-color: #cc9999;
+background-color: #9999cc;
 color: #000033;
 margin: 0;
 font: 1.84020em/1.5 "Open Sans", Helvetica, Arial, sans-serif;
