--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ h3 {
 }
 h4 {
   font-size: 2rem;
-  line-height: 1;
+  line-height: 2;
 }
 h6 {
   font-size: .8rem;
@@ -73,10 +73,11 @@ a:active {
 
 
 /* Naviagation -------------------- */
-.site-header a:link {
+.navbar-brand a:link {
   color: #000;
+  background-color:none;
 }
-.site-header a:hover{
+.navbar-brand a:hover{
   color: #cccc99;
   background-color: none;
 }
