--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,7 +9,7 @@
 
 
         <div class="mt10 recent">
-            <h2>Things</h2>
+            <h2>News</h2>
              <ul>
                 {% for post in site.related_posts limit:2 %}
 
