--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
         <ul class="nav navbar-nav navbar-right et_navlink">
           <li><a href="{{site.baseurl}}/info/">Info</a></li>
           <li><a href="https://omni-seasonal-omens.tumblr.com/">Zine</a></li>
-          <li><a href="{{site.baseurl}}">News</a></li>
+          <li><a href="{{site.baseurl}}/">News</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
