--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,6 @@ a:active {
     margin: 10px;
 }
 .post-meta {
-    color: #cccc99;
-    font-size: 1rem;
+    color: #000;
+    font-size: 1.5rem;
 }
