--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
   <div class="col-md-4 text-center">All rights reserved by <a target="_blank" href="{{site.copyright.link}}">{{site.copyright.name}}</a></div>
     {% endif %}
 
-  <div class="col-md-4 text-center">Site development by  <a target="_blank" href="https://github.com/digitalscraps">{% if site.built-by %}</a></div>
+  <div class="col-md-4 text-center">Site development by  <a target="_blank" href="https://github.com/digitalscraps">{{site.built-by}</a></div>
 
 
 
