--- a/_layouts/info.html
+++ b/_layouts/info.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="row">
-<div class="col-md-8">
+<div class="col-sm-12 col-md-12">
 <article class="post">
 
   <header class="post-header">
