--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="row">
 <div class="col-md-8">
-    <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+    <article class="post">
 
           <header class="post-header">
             <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
