--- a/css/style.css
+++ b/css/style.css
@@ -1,170 +1,215 @@
-/* Base Styles -------------------- */
+/* =================================
+  Base Styles
+==================================== */
+* {
+  box-sizing: border-box;
+}
+
 body {
-background-color: #fff;
-color: #000033;
-margin: 0;
-font: 1.84020em/1.5 "Open Sans", Helvetica, Arial, sans-serif;
+	line-height: 1.6;
+	color: #000;
+  background: #fff;
+  font-family: sans-serif;
+}
+p {
+  font-size: .95em;
+  font-family: Times;
 }
 
+h2,h3 {
+  display: inline;
+  padding-bottom: 2px;
+  border-bottom: solid #2a64f8 2px;
+}
+
+a {
+	text-decoration: none;
+}
+
+i {
+  color: #2a64f8;
+}
 img {
-    max-width: 100%;
+  max-width: 100%;
+  margin: 1em 0;
 }
-h1 {
-  font-size: 5.625rem; /* 90px/16px  */
-  color: #000;
+figure {
+  margin: 0;
+  line-height: 0;
+  position: relative;
+}
+figcaption {
+  font-size: .9em;
+  line-height: 1.5;
+  color: #fff;
+  background: rgba(42,100,248, .5);
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+}
+
+
+/* =================================
+Layout Styles
+==================================== */
+
+/*-- Navigation -- */
+
+.name {
+  font-size: 1.95rem;
+  letter-spacing: .2rem;
+  margin: 0;
+}
+
+.main-nav {
+  margin: 5px 0 0 0;
+  padding: 0;
+  text-align: center;
+}
+
+.name a,
+.main-nav a {
+  text-align: center;
+  display: block;
+  padding: 10px 15px;
+}
+
+.main-nav a {
+  font-size: .95em;
+  color: #2a64f8;
   text-transform: uppercase;
-  font-weight: normal;
-  line-height: 1.3;
 }
 
-h2 {
-  font-size: 2.1747rem; /* 53px/16px  */
-  font-weight: normal;
-  line-height: 1.1;
-}
-
-h3 {
-  font-size: 2.67666rem;
-  line-height: 1.2;
-}
-h4 {
-  font-size: 2rem;
-  line-height: 2;
-}
-h6 {
-  font-size: .8rem;
-  line-height: 1;
-}
-ul, ol {
+.main-nav li {
   list-style: none;
-  margin-left: 0;
-}
-li {
-
+  display: inline-block;
 }
 
-/* Pseudo-classes ------------------ */
-a:link {
-  color: #9999cc;
-  border-bottom: 1px dotted #000;
+.main-nav a i {
+  font-size: 1.5em;
 }
-
+.main-nav a:hover, .main-nav a i:hover {
+  color: red;
+}
 a:visited {
-  color: #000033;
-  border: 1px solid #ff9999;
-}
-
-a:hover {
-  background-color:#ccccff;
-  color: 000033;
-  text-decoration: underline;
-}
-
-a:active {
-  color: #000033;
+  color: #2a64f8;
 }
 
 
-/* Main Styles --------------------- */
+/*-- layout containers --*/
 
-
-/* Layout Styles ------------------ */
-
-
-/* Naviagation -------------------- */
-.navbar-brand:link {
-  color: #9999cc;
-}
-.navbar-brand:hover{
-  color: #cccc99;
-}
-.navbar-brand {
-    font-weight: 900;
-    font-size: 1.85em;
-    padding: 10px;
-    color: #fff;
-}
-footer {
-  margin-top: 20px;
-  border-top: 4px dotted #000;
-}
-.et__footer {
-    margin-top: 20px;
-    font: 2rem;
+.main-header {
+  padding: .35em 0;
 }
 
+.banner,
+.main-footer {
+  text-align:center;
+}
 
-.mt50 {
-    margin-top: 50px;
+.banner {
+  color: #fff;
+  background: #2a64f8;
+  margin-bottom: 24px;
+  padding: 3.2em 0;
+}
+
+.col {
+  padding-right: 1em;
+  padding-left: 1em;
+}
+
+.main-footer {
+  padding: 2em 0;
+  margin-top: 30px;
+}
+
+/* ---- Page Elements---- */
+.logo {
+  min-width: 20%;
+  max-width: 125px;
+  padding: 0 5%;
+}
+.headline {
+  padding: 0 5%;
+  margin-bottom: 0;
+}
+#tagline {
+  margin-bottom: 15px;
+  font-style: italic;
+}
+.icon-logo {
+  width: 35px;
+  position: absolute;
+  top: -15px;
+  right: -15px;
+  background-color: #2a64f8;
+  border-radius: 50%;
 }
 
 
+/* =================================
+Media Queries
+==================================== */
 
 
-/* Social -------------------- */
-.social {
-    list-style: none;
-    display: inline;
-    margin-left: 10px;
-    padding: 5px 8px;
-    }
-.social:hover {
-     opacity: 0.7;
-}
-.social img {
-    width: 20px;
-}
+@media (min-width: 769px) {
 
-.quora img{
-    width: 17px;
-}
-
-.facebook img {
-    width: 16px;
-}
-
-/* Event Page -------------------- */
-.et__panel {
-    margin-bottom: 20px;
-}
-
-.panel:hover {
-    box-shadow: 0px 0px 6px grey;
-}
-
-.recent ul {
-    list-style: none;
-    padding: 0;
-    text-align: justify;
-}
-
-.recent {
-    padding: 10px;
-    border: 1px solid grey;
-}
-
-.post-img img {
+  .main-header {
+    position: fixed;
+    background: #fff;
+    box-shadow: 0 1px 4px rgba(0,0,0,.4);
     width: 100%;
-}
+    top: 0;
+    z-index: 10;
+  }
 
+  .header-inner, .row {
+    width: 80%;
+    margin: 0 auto;
+    max-width: 1400px;
+  }
 
-.pack {
+  .header-inner, .main-nav {
+    display: flex;
+  }
 
-    display: -webkit-inline-flex;
-    display: -ms-inline-flexbox;
-    display: inline-flex;
+  .header-inner {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .row {
     flex-wrap: wrap;
-    -webkit-flex-wrap: wrap;
+  }
+
+  .main{
+   width: 90%;
+   padding: 0 10px;
+   border: solid #2a64f8 2px;
+  }
+
+  .col {
+    flex: 1 50%;
+  }
+
+  .secondary {
+    order: -1;
+  }
+
+  .tagline {
+    font-size: 1.4em;
+  }
 }
 
-.card {
-    float: none;
 
-}
-.mt10 {
-    margin: 10px;
-}
-.post-meta {
-    color: #000;
-    font-size: 1.5rem;
+@media (min-width: 1025px) {
+  .col {
+    flex-basis: 0;
+  }
+  .primary {
+    flex-grow: 1.4;
+  }
+
 }
