--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ figcaption {
   background: rgba(42,100,248, .5);
   position: absolute;
   bottom: 0;
-  width: 100%;
+  width: 25%;
   text-align: center;
 }
 
@@ -180,9 +180,7 @@ Media Queries
     justify-content: space-between;
   }
 
-  .row {
-    flex-wrap: wrap;
-  }
+
 
   .main{
    width: 90%;
@@ -210,6 +208,7 @@ Media Queries
   }
   .primary {
     flex-grow: 1.4;
+    display: flex;
+    flex-direction: row;
   }
-
 }
