updating links and styles

--- a/css/layout.css
+++ b/css/layout.css
@@ -76,7 +76,8 @@ with brand on left and links on right */
     align-content: center;
 }
 .l-fc-background {
-    background-image: url("../img/art.png");
+    background-image: url("../img/purp.png");
+    background-blend-mode: color-dodge;
     background-position: top;
     background-size: contain;
     background-repeat: no-repeat;
