--- a/css/base.css
+++ b/css/base.css
@@ -20,6 +20,9 @@
     text-transform: lowercase;
     font-size: 3rem;
     font-weight: bolder;
+    text-align: right;
+    width: 85%;
+    padding: 5px 1.45rem 5px 0;
   }
   h2 {
     font-size: 3em;
@@ -103,7 +106,7 @@
 
 @media screen and (min-width: 798px){
      header h1 {
-       font-size: 5rem;
+       font-size: 4rem;
      }
      h2 {
        font-size: 4rem;
