--- a/css/base.css
+++ b/css/base.css
@@ -20,7 +20,7 @@
     text-transform: lowercase;
     font-size: 3rem;
     font-weight: bolder;
-    text-align: right;
+    text-align: center;
     width: 85%;
     padding: 5px 1.45rem 5px 0;
   }
